# r2iac

./: .gitignore  Cargo.toml  README.md
crates/aws/: Cargo.toml
crates/aws/src/: lib.rs
crates/azure/: Cargo.toml
crates/azure/src/: lib.rs
crates/cfn/: Cargo.toml
crates/cfn/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/gcp/: Cargo.toml
crates/gcp/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/tfcompat/: Cargo.toml
crates/tfcompat/src/: lib.rs
examples/: aws_kms_secrets.yml  azure_stack.yml  gcp_stack.yml  s3_stack.yml
