[workspace]
members = [
  "crates/cli",
  "crates/core",
  "crates/policy",
  "crates/crypto",
  "crates/tfcompat",
  "crates/aws",
  "crates/azure",
  "crates/gcp"
  ,"crates/cfn"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","json"] }
which = "6"
petgraph = "0.6"
secrecy = "0.8"
zeroize = "1"
age = "0.11"
ring = "0.17"
simd-json = "0.13"
regex = "1"
async-trait = "0.1"
