[package]
name = "r2iac"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
which = { workspace = true }
secrecy = { workspace = true }
age = { workspace = true }
r2iac-policy = { path = "../policy" }
r2iac-crypto = { path = "../crypto" }
r2iac-tfcompat = { path = "../tfcompat" }
r2iac-aws = { path = "../aws" }
r2iac-azure = { path = "../azure" }
r2iac-gcp = { path = "../gcp" }
r2iac-cfn = { path = "../cfn" }
